[package]
name = "cch23-santa5276"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["multipart", "ws"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
base64 = "0.21.7"
bytes = "1.5.0"
chrono = "0.4.34"
cookie = "0.18.0"
country-boundaries = "1.2.0"
dms-coordinates = "1.3.0"
futures-util = "0.3.30"
git2 = "0.18.2"
glam = "0.25.0"
html-escape = "0.2.13"
image = "0.24.8"
isocountry = "0.3.2"
pathfinding = "4.9.1"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
s2 = "0.0.12"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sha256 = "1.5.0"
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
shuttle-shared-db = { version = "0.39.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.3", features = ["macros", "postgres", "runtime-tokio-rustls"] }
tar = "0.4.40"
tempfile = "3.10.0"
tokio = "1.28.2"
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
ulid = { version = "1.1.2", features = ["uuid"] }
urlencoding = "2.1.3"
uuid = "1.7.0"
